syntax = "proto3";

package vamp.fun;

message StateSnapshotProto {
    repeated bytes accounts = 1;
    repeated bytes amounts = 2;
}
